# tsv-search

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
